# model_negotiate_contract_200_response_data.go
@@ -1,0 +1,118 @@
+/*
+SpaceTraders API
+
+SpaceTraders is an open-universe game and learning platform that offers a set of HTTP endpoints to control a fleet of ships and explore a multiplayer universe.  The API is documented using [OpenAPI](https://github.com/SpaceTradersAPI/api-docs). You can send your first request right here in your browser to check the status of the game server.  ```json http {   \"method\": \"GET\",   \"url\": \"https://api.spacetraders.io/v2\", } ```  Unlike a traditional game, SpaceTraders does not have a first-party client or app to play the game. Instead, you can use the API to build your own client, write a script to automate your ships, or try an app built by the community.  We have a [Discord channel](https://discord.com/invite/jh6zurdWk5) where you can share your projects, ask questions, and get help from other players.   
+
+API version: 2.0.0
+Contact: joel@spacetraders.io
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package spacetraders_openapi_go_client
+
+import (
+	"encoding/json"
+)
+
+// checks if the NegotiateContract200ResponseData type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &NegotiateContract200ResponseData{}
+
+// NegotiateContract200ResponseData struct for NegotiateContract200ResponseData
+type NegotiateContract200ResponseData struct {
+	Contract Contract `json:"contract"`
+}
+
+// NewNegotiateContract200ResponseData instantiates a new NegotiateContract200ResponseData object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewNegotiateContract200ResponseData(contract Contract) *NegotiateContract200ResponseData {
+	this := NegotiateContract200ResponseData{}
+	this.Contract = contract
+	return &this
+}
+
+// NewNegotiateContract200ResponseDataWithDefaults instantiates a new NegotiateContract200ResponseData object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewNegotiateContract200ResponseDataWithDefaults() *NegotiateContract200ResponseData {
+	this := NegotiateContract200ResponseData{}
+	return &this
+}
+
+// GetContract returns the Contract field value
+func (o *NegotiateContract200ResponseData) GetContract() Contract {
+	if o == nil {
+		var ret Contract
+		return ret
+	}
+
+	return o.Contract
+}
+
+// GetContractOk returns a tuple with the Contract field value
+// and a boolean to check if the value has been set.
+func (o *NegotiateContract200ResponseData) GetContractOk() (*Contract, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Contract, true
+}
+
+// SetContract sets field value
+func (o *NegotiateContract200ResponseData) SetContract(v Contract) {
+	o.Contract = v
+}
+
+func (o NegotiateContract200ResponseData) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o NegotiateContract200ResponseData) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["contract"] = o.Contract
+	return toSerialize, nil
+}
+
+type NullableNegotiateContract200ResponseData struct {
+	value *NegotiateContract200ResponseData
+	isSet bool
+}
+
+func (v NullableNegotiateContract200ResponseData) Get() *NegotiateContract200ResponseData {
+	return v.value
+}
+
+func (v *NullableNegotiateContract200ResponseData) Set(val *NegotiateContract200ResponseData) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableNegotiateContract200ResponseData) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableNegotiateContract200ResponseData) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableNegotiateContract200ResponseData(val *NegotiateContract200ResponseData) *NullableNegotiateContract200ResponseData {
+	return &NullableNegotiateContract200ResponseData{value: val, isSet: true}
+}
+
+func (v NullableNegotiateContract200ResponseData) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableNegotiateContract200ResponseData) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
